experiment_output/error_log/nondex-JerryDtj-iLove.log
Errors occurred while build effective model from /root/.gradle/caches/modules-2/files-2.1/com.alibaba/druid/1.1.12/8c9ef8a2e433d28228fbab0165b1781fea0dccda/druid-1.1.12.pom:
    'dependencies.dependency.systemPath' for com.alibaba:jconsole:jar must specify an absolute path but is ${env.JAVA_HOME}/lib/jconsole.jar in com.alibaba:druid:1.1.12
    'dependencies.dependency.systemPath' for com.alibaba:tools:jar must specify an absolute path but is ${env.JAVA_HOME}/lib/tools.jar in com.alibaba:druid:1.1.12
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task213/wd/NonDex-plugin-test/github.com/JerryDtj/iLove/src/main/java/com/love/ilove/utils/QiNiuUtils.java:4: error: package com.google.gson does not exist
import com.google.gson.Gson;
                      ^
Note: /mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task213/wd/NonDex-plugin-test/github.com/JerryDtj/iLove/src/main/java/com/love/ilove/utils/QiNiuUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
1 error

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 2m 12s
